# smo

./: .env.example  .gitignore  README.md  pyproject.toml
archive/notebook_exports/: smopaper_clinicalehealth_r2_usethis_(updated).py
data/samples/: Cases.txt  cases.json
notebooks/archived/: AgenticAI.ipynb  SMOPaper_ClinicaleHealth_R2_UseThis_(Updated).ipynb
outputs/evaluation/: prompt_log_4case.json  prompt_log_4case_rich_trace.json  selected_threshold.json  table10_dynamic_latency_breakdown.csv  table9_dynamic_cost_breakdown.csv
paper/latex/: Manuscript_R3_Highlighted.tex
scripts/: check_api_keys.py  run_alignment_eval.py  run_app.ps1  run_cost_report.py  run_geval_eval.py  run_repeatability_eval.py
src/smo/: __init__.py  config.py  evaluation.py  formatting.py  geval.py  patient_store.py  pipeline.py  reference_data.py  result_store.py  schemas.py  text_safety.py  vectorstore.py
src/smo/web/: __init__.py  app.py
src/smo/web/static/: results-pagination.js  styles.css
src/smo/web/templates/: export.html  index.html
tests/: test_formatting.py  test_geval.py  test_patient_store.py  test_result_store.py
uuid_utils/: __init__.py
uuid_utils/compat/: __init__.py
