[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smo-agentic"
version = "0.1.0"
description = "Agentic second medical opinion system with FastAPI frontend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-openai>=0.2",
  "langchain-anthropic>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-text-splitters>=0.3",
  "faiss-cpu>=1.9.0",
  "pypdf>=5.0.0",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
eval = [
  "numpy>=2.0",
  "pandas>=2.2",
  "matplotlib>=3.9",
  "sentence-transformers>=3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"smo.web" = ["templates/*.html", "static/*.css"]
